# CI2024_project-work

./: .gitignore  generate_problem.py  problem_0.npz  problem_1.npz  problem_2.npz  pyproject.toml  requirements.txt  s327797.py
results/: problem_0.txt  problem_1.txt  problem_2.txt  problem_3.txt  problem_4.txt
src/: generate_problem.py  genetic_operators.py  gp.py  individual.py  learn_functions.py  model.py  mutation.py  niching.py  population_selectors.py  s327797.py  util_functions.py  visualize_results.py
src/symreg/: __main__.py  genetic_operators.py  gp.py  individual.py  learn_functions.py  model.py  population_selectors.py  test_residuals.py  util_functions.py  visualize_functions.py
tests/: problem_0.npz  problem_1.npz  problem_2.npz  problem_3.npz  validation_0.npz  validation_1.npz  validation_2.npz  validation_3.npz
