[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symreg"
version = "0.1.0"
description = "Perform symbolic regression using genetic programming"
authors = [
    { name="Francesco Basile"}
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm; extra == 'optional'",
]

[tool.setuptools]
packages = ["symreg"]
package-dir = {"" = "src"}

[project.scripts]
symreg = "symreg.__main__:main"
